[gd_scene load_steps=3 format=3 uid="uid://ygtq2dj8v6xm"]

[ext_resource type="Script" path="res://MatchScene/TeamTacticsUI.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bpb8ra3kywlo6" path="res://MatchScene/CourtRepresentationUI.tscn" id="4"]

[node name="TeamTacticsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1820.0
offset_bottom = 1080.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 50.0
alignment = 1

[node name="ServeUIButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Serve"

[node name="ReceiveUIButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Receive"

[node name="SetUIButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Set"

[node name="BlockUIButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Block"

[node name="Button4" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ReceiveOptionsUI" type="Control" parent="."]
visible = false
anchors_preset = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="ReceiveOptionsUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 74.0
offset_right = 1820.0
offset_bottom = 170.0
grow_horizontal = 2
alignment = 1

[node name="Rot1Button" type="Button" parent="ReceiveOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 1"

[node name="Rot2Button" type="Button" parent="ReceiveOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 2"

[node name="Rot3Button" type="Button" parent="ReceiveOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 3"

[node name="Rot4Button" type="Button" parent="ReceiveOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 4"

[node name="Rot5Button" type="Button" parent="ReceiveOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 5"

[node name="Rot6Button" type="Button" parent="ReceiveOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 6"

[node name="ServeOptionsUI" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="ServeOptionsUI"]
layout_mode = 0
offset_left = 36.0
offset_top = 211.0
offset_right = 378.0
offset_bottom = 1057.0

[node name="VBoxContainer" type="VBoxContainer" parent="ServeOptionsUI/ScrollContainer"]
custom_minimum_size = Vector2(300, 1000)
layout_mode = 2

[node name="Button" type="Button" parent="ServeOptionsUI/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button2" type="Button" parent="ServeOptionsUI/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button3" type="Button" parent="ServeOptionsUI/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button4" type="Button" parent="ServeOptionsUI/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button5" type="Button" parent="ServeOptionsUI/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button6" type="Button" parent="ServeOptionsUI/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button7" type="Button" parent="ServeOptionsUI/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button8" type="Button" parent="ServeOptionsUI/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button9" type="Button" parent="ServeOptionsUI/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button10" type="Button" parent="ServeOptionsUI/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button11" type="Button" parent="ServeOptionsUI/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Athlete1ServeOptionsUI" type="Control" parent="ServeOptionsUI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CourtRepresentationUI" parent="ServeOptionsUI/Athlete1ServeOptionsUI" instance=ExtResource("4")]
layout_mode = 0
offset_left = 1760.81
offset_top = 214.407
offset_right = 3560.81
offset_bottom = 1314.4

[node name="GridContainer" type="GridContainer" parent="ServeOptionsUI/Athlete1ServeOptionsUI"]
layout_mode = 0
offset_left = 532.0
offset_top = 338.0
offset_right = 868.0
offset_bottom = 936.0

[node name="Button2" type="Button" parent="ServeOptionsUI/Athlete1ServeOptionsUI/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Target Weakest Receiver"

[node name="Button5" type="Button" parent="ServeOptionsUI/Athlete1ServeOptionsUI/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Target Strongest Receiving Attacker"

[node name="Button3" type="Button" parent="ServeOptionsUI/Athlete1ServeOptionsUI/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Target Player"

[node name="Button4" type="Button" parent="ServeOptionsUI/Athlete1ServeOptionsUI/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Target Location"

[node name="Button" type="Button" parent="ServeOptionsUI/Athlete1ServeOptionsUI/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Target Libero"

[node name="ServeDir" type="Line2D" parent="ServeOptionsUI/Athlete1ServeOptionsUI"]
position = Vector2(1555.11, 1058.65)
rotation = -3.14159
scale = Vector2(0.4746, 0.4746)
points = PackedVector2Array(-30, 340, 0, 385, 30, 340, 0, 385, 0, 0)
width = 20.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 9.0
round_precision = 13
antialiased = true

[node name="SetOptionsUI" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BlockOptionsUI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer2" type="HBoxContainer" parent="BlockOptionsUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 74.0
offset_right = 1780.0
offset_bottom = 170.0
grow_horizontal = 2
alignment = 1

[node name="Rot1Button" type="Button" parent="BlockOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 1"

[node name="Rot2Button" type="Button" parent="BlockOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 2"

[node name="Rot3Button" type="Button" parent="BlockOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 3"

[node name="Rot4Button" type="Button" parent="BlockOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 4"

[node name="Rot5Button" type="Button" parent="BlockOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 5"

[node name="Rot6Button" type="Button" parent="BlockOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 6"

[node name="Label" type="Label" parent="BlockOptionsUI"]
layout_mode = 0
offset_left = 639.0
offset_top = 200.0
offset_right = 765.0
offset_bottom = 231.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Rotation 1"

[node name="Button" type="Button" parent="BlockOptionsUI"]
layout_mode = 0
offset_left = 124.0
offset_top = 928.0
offset_right = 212.0
offset_bottom = 959.0
text = "Substitute"

[node name="CourtRepresentationUI" parent="BlockOptionsUI" instance=ExtResource("4")]
layout_mode = 0
offset_left = 1809.0
offset_top = 209.0
offset_right = 3609.0
offset_bottom = 1309.0

[node name="BlockingIndividualUI" type="Control" parent="BlockOptionsUI"]
anchors_preset = 0
offset_left = 120.0
offset_top = 232.0
offset_right = 160.0
offset_bottom = 272.0

[node name="Label4" type="Label" parent="BlockOptionsUI/BlockingIndividualUI"]
layout_mode = 0
offset_left = 9.0
offset_top = 2.0
offset_right = 193.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Position 4 Blocker: "

[node name="Label5" type="Label" parent="BlockOptionsUI/BlockingIndividualUI"]
layout_mode = 0
offset_left = 5.0
offset_top = 68.0
offset_right = 189.0
offset_bottom = 99.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Role: "

[node name="Label8" type="Label" parent="BlockOptionsUI/BlockingIndividualUI"]
layout_mode = 0
offset_left = 5.0
offset_top = 101.0
offset_right = 189.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Block: 85"

[node name="Label9" type="Label" parent="BlockOptionsUI/BlockingIndividualUI"]
layout_mode = 0
offset_left = 5.0
offset_top = 134.0
offset_right = 189.0
offset_bottom = 165.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Speed: 2"

[node name="Label10" type="Label" parent="BlockOptionsUI/BlockingIndividualUI"]
layout_mode = 0
offset_left = 5.0
offset_top = 162.0
offset_right = 189.0
offset_bottom = 193.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Block Reach: 334*"

[node name="Label11" type="Label" parent="BlockOptionsUI/BlockingIndividualUI"]
layout_mode = 0
offset_left = 2.0
offset_top = 430.0
offset_right = 186.0
offset_bottom = 461.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Starting position: "

[node name="OptionButton2" type="OptionButton" parent="BlockOptionsUI/BlockingIndividualUI"]
layout_mode = 0
offset_left = -3.0
offset_top = 493.0
offset_right = 118.0
offset_bottom = 526.0
item_count = 1
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0

[node name="Label14" type="Label" parent="BlockOptionsUI/BlockingIndividualUI"]
layout_mode = 0
offset_left = -1.0
offset_top = 467.0
offset_right = 196.0
offset_bottom = 498.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Anticipate Attacker: "

[node name="CommitBlockOptionsUI" type="Control" parent="BlockOptionsUI/BlockingIndividualUI"]
anchors_preset = 0
offset_top = 256.0
offset_right = 40.0
offset_bottom = 296.0

[node name="OptionButton" type="OptionButton" parent="BlockOptionsUI/BlockingIndividualUI/CommitBlockOptionsUI"]
layout_mode = 0
offset_left = 5.0
offset_top = 29.0
offset_right = 126.0
offset_bottom = 62.0

[node name="Label11" type="Label" parent="BlockOptionsUI/BlockingIndividualUI/CommitBlockOptionsUI"]
layout_mode = 0
offset_left = 7.0
offset_top = 3.0
offset_right = 191.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Target: "

[node name="Label12" type="Label" parent="BlockOptionsUI/BlockingIndividualUI/CommitBlockOptionsUI"]
layout_mode = 0
offset_left = 6.0
offset_top = 82.0
offset_right = 418.0
offset_bottom = 113.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Ignore target if this unlikely to receive set: "

[node name="Label13" type="Label" parent="BlockOptionsUI/BlockingIndividualUI/CommitBlockOptionsUI"]
layout_mode = 0
offset_left = 4.0
offset_top = 134.0
offset_right = 416.0
offset_bottom = 165.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Always block - 99% Range"

[node name="HSlider" type="HSlider" parent="BlockOptionsUI/BlockingIndividualUI/CommitBlockOptionsUI"]
layout_mode = 0
offset_left = 5.0
offset_top = 106.0
offset_right = 173.0
offset_bottom = 145.0
max_value = 4.0

[node name="OptionButton" type="OptionButton" parent="BlockOptionsUI/BlockingIndividualUI"]
layout_mode = 0
offset_left = -1.0
offset_top = 201.0
offset_right = 150.0
offset_bottom = 232.0
item_count = 2
selected = 0
popup/item_0/text = "Commit Block"
popup/item_0/id = 0
popup/item_1/text = "React Block"
popup/item_1/id = 1

[connection signal="pressed" from="HBoxContainer/ServeUIButton" to="." method="_on_ServeUIButton_pressed"]
[connection signal="pressed" from="HBoxContainer/ReceiveUIButton" to="." method="_on_receive_ui_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SetUIButton" to="." method="_on_set_ui_button_pressed"]
[connection signal="pressed" from="HBoxContainer/BlockUIButton" to="." method="_on_block_ui_button_pressed"]
